--- a/package.json
+++ b/package.json
@@ -1,12 +1,5 @@
 {
   "name": "finan",
   "version": "1.0.0",
-  "author": "Jairo Castro",
-  "description": "Proyecto facturación y control de inventario",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "license": "ISC"
+  "author": "Jairo Castro"
 }
